--- a/Commands/DB Schema Dump.plist
+++ b/Commands/DB Schema Dump.plist
@@ -6,7 +6,7 @@
 	<string>nop</string>
 	<key>command</key>
 	<string>RUBYLIB="$TM_BUNDLE_SUPPORT/lib:$RUBYLIB"
-"ruby18" -- "${TM_BUNDLE_SUPPORT}/bin/rake_helper.rb" db:schema:dump
+"${TM_RUBY:=ruby}" -- "${TM_BUNDLE_SUPPORT}/bin/rake_helper.rb" db:schema:dump
 </string>
 	<key>input</key>
 	<string>none</string>
