--- a/Commands/Rake Migrate.plist
+++ b/Commands/Rake Migrate.plist
@@ -6,7 +6,7 @@
 	<string>nop</string>
 	<key>command</key>
 	<string>RUBYLIB="$TM_BUNDLE_SUPPORT/lib:$RUBYLIB"
-"ruby18" -- "${TM_BUNDLE_SUPPORT}/bin/rake_helper.rb" db:migrate
+"${TM_RUBY:=ruby}" -- "${TM_BUNDLE_SUPPORT}/bin/rake_helper.rb" db:migrate
 </string>
 	<key>input</key>
 	<string>none</string>
